devops/k8s/base/middleware-redirect-https.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sonarbridge-ingress-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
