devops/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarbridge-deployment
  labels:
    type_app: backend
spec:
  selector:
    matchLabels:
      app: sonarbridge
  replicas: 1
  template:
    metadata:
      name: sonarbridge-pod
      labels:
        app: sonarbridge
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      volumes:
        - name: log-volume
          hostPath:
            path: /data/kube-data/portail/logs/${ENV}
        - name: external-ca-files-vol
          secret:
            secretName: sonarbridge-external-ca-files
      containers:
        - name: sonarbridge-container
          image: sonarbridge-container-image
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          ports:
            - containerPort: 9405
#          livenessProbe:
#            httpGet:
#              path: /healthz
#              port: 9405
#            initialDelaySeconds: 10
#            periodSeconds: 30
#            timeoutSeconds: 5
#            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9405
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - mountPath: /data/kube-data/portail/logs/${ENV}/sonarbridge
              name: log-volume
            - mountPath: "/etc/sonarbridge/certs"
              name: external-ca-files-vol
              readOnly: true
