devops/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarbridge-service
spec:
  type: ClusterIP
  ports:
    - port: 9405
      targetPort: 9405
      protocol: TCP
      name: http
  selector:
    app: sonarbridge
