devops/k8s/base/ingress-nginx.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarbridge-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarbridge.cavom.lan
      secretName: sonarbridge-tls
  rules:
    - host: sonarbridge.cavom.lan
      http:
        paths:
          - backend:
              service:
                name: sonarbridge-service
                port:
                  number: 9405
            path: /sonarbridge
            pathType: Prefix
