devops/k8s/base/ingress-traefik.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarbridge-ingress
#  annotations:
#    traefik.ingress.kubernetes.io/router.entrypoints: websecure
#    traefik.ingress.kubernetes.io/route.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: sonarbridge.cavom.lan
      http:
        paths:
          - backend:
              service:
                name: sonarbridge-service
                port:
                  number: 9405
            path: /
            pathType: Prefix


#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    io.portainer.kubernetes.ingress.owner: admin
  name: sonarbridge-prod-ingress
  namespace: sonarbridge-prod
spec:
  ingressClassName: traefik
  rules:
    - host: sonarbridge.cavom.lan
      http:
        paths:
          - backend:
              service:
                name: sonarbridge-service-prod
                port:
                  number: 9405
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarbridge.cavom.lan
      secretName: sonarbridge-tls
