devops/k8s/base/ingressroute-http-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarbridge-ingressroute-http
spec:
  entryPoints:
    - web
  tls: { }
  routes:
    - match: Host(`sonarbridge.cavom.lan`)
      kind: Rule
      middlewares:
        - name: sonarbridge-ingress-redirect-https
      services:
        - name: sonarbridge-service-prod
          port: 9405
