devops/k8s/base/ingressroute-https-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarbridge-ingressroute-https
spec:
  entryPoints:
    - websecure
  tls:
    secretName: sonarbridge-tls
  routes:
    - match: Host(`sonarbridge.cavom.lan`)
      kind: Rule
      services:
        - name: sonarbridge-service-prod
          port: 9405
